fix home button text wrap

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -189,13 +189,3 @@ a {
 .btn:focus {
     background-color: #93ffe7;
 }
-
-.btn-home {
-    padding: 1rem 2rem;
-    background-color: #fff;
-}
-
-.btn-home:hover,
-.btn-home:focus {
-    background-color: #93ffe7;
-}
